<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/back_2"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/firstLine"
        android:layout_marginTop="40dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/baza_databaza"
            style="@style/GreenText"
             />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/secondLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="150dp"
        android:layout_below="@+id/firstLine">

        <TextView
            android:id="@+id/spinnerTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/criteri"
            style="@style/GreenText"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/thirdLine"
        android:layout_below="@+id/secondLine"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/enter_nazvanie"
            style="@style/GreenText"/>

        <EditText
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/fourthLine"
        android:layout_below="@+id/thirdLine"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/day_price"
            style="@style/GreenText"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/priceOt"
                android:layout_margin="5dp"
                android:text="@string/price_ot"
                android:layout_marginTop="17dp"
                style="@style/GreenText"/>

            <EditText
                android:layout_margin="10dp"
                android:layout_width="350dp"
                android:layout_height="50dp">
            </EditText>
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/priceDo"
                android:text="@string/price_do"
                android:layout_margin="5dp"
                android:layout_marginTop="15dp"
                style="@style/GreenText"/>

            <EditText
                android:layout_margin="10dp"
                android:layout_width="350dp"
                android:layout_height="50dp">
            </EditText>
        </LinearLayout>



    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fifthLine"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_below="@id/fourthLine">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/searchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="Search"

            android:text="@string/search">

        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>




</RelativeLayout>