<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardBackgroundColor="@android:color/transparent"
    app:cardCornerRadius="2dp">



      <RelativeLayout

          android:layout_width="match_parent"
          android:padding="10dp"
          android:layout_height="wrap_content">

          <ImageView
              android:layout_width="180dp"
              android:layout_height="180dp"
              android:padding="4dp"
              android:id="@+id/bazaImageView">
          </ImageView>

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/titleTextView"
              android:text="@string/baza_name"
              android:textSize="25sp"
              android:textStyle="bold"
              android:layout_marginTop="20dp"
              android:layout_marginStart="5dp"
              android:layout_alignParentTop="true"
              android:layout_toEndOf="@id/bazaImageView">

          </TextView>

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/lakeTextViewConst"
              android:text="Озеро: "
              android:textSize="15sp"
              android:layout_marginStart="5dp"
              android:textStyle="italic"
              android:layout_below="@id/titleTextView"
              android:layout_toEndOf="@id/bazaImageView">

          </TextView>

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/lakeTextView"
              android:text="@string/lake"
              android:textSize="15sp"
              android:layout_marginStart="5dp"
              android:textStyle="italic"
              android:layout_below="@id/titleTextView"
              android:layout_toEndOf="@id/lakeTextViewConst">

          </TextView>

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/distanceTextViewConst"
              android:text="Расстояние: "
              android:textSize="15sp"
              android:layout_marginStart="5dp"
              android:textStyle="italic"
              android:layout_below="@id/lakeTextView"
              android:layout_toEndOf="@id/bazaImageView">

          </TextView>

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/distanceTextView"
              android:text="Distance"
              android:textSize="15sp"
              android:textStyle="italic"
              android:layout_marginStart="5dp"
              android:layout_below="@id/lakeTextView"
              android:layout_toEndOf="@id/distanceTextViewConst">

          </TextView>

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/priceTextViewConst"
              android:text="Цены от: "
              android:textSize="15sp"
              android:layout_marginStart="5dp"
              android:textStyle="italic"
              android:layout_below="@id/distanceTextView"
              android:layout_toEndOf="@id/bazaImageView">

          </TextView>

          <TextView
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:id="@+id/priceTextView"
              android:text="@string/price"
              android:layout_marginStart="5dp"
              android:textSize="15sp"
              android:textStyle="italic"
              android:layout_below="@id/distanceTextView"
              android:layout_toEndOf="@id/priceTextViewConst">

          </TextView>

      </RelativeLayout>


</androidx.cardview.widget.CardView>